ribenabos/pokepedia#1 Added base views and urls

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,14 +24,14 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2/dist/tailwind.min.css" rel="stylesheet" type="text/css" />
 </head>
 <body class="bg-gray-100">
-  <nav class="bg-blue-500 py-4 px-8 fixed w-full">
-    <div class="container mx-auto">
-      <a href="{% url 'index' %}" class="text-white font-bold text-lg">Poképedia</a>
-      <a href="{% url 'pokemon_list' %}" class="text-white font-bold text-lg">Pokémon List</a>
+  <nav class="bg-red-500 py-4 px-8 fixed w-full">
+    <div class="container mx-auto flex justify-between">
+      <a href="{% url 'index' %}" class="text-white font-bold text-lg nav-item nav-item-index">Poképedia</a>
+      <a href="{% url 'pokedex_index' %}" class="text-white font-bold text-lg nav-item">Pokédex</a>
     </div>
   </nav>
-  <div class="container mx-auto pt-16">
-    <div id="app" class="p-4">
+  <div class="container mx-auto pt-16 bg-gray-100">
+    <div id="app" class="p-4 bg-gray-100">
       {% block content %}
       {% endblock %}
     </div>
