--- a/templates/pokedex_index.html
+++ b/templates/pokedex_index.html
@@ -8,6 +8,6 @@
 
     <h2>Navigation:</h2>
     <ul>
-        <li><a href="{% url 'pokedex_index' %}">Pokédex</a></li>
+        <li><a href="{% url 'pokemon_list' %}">Pokémon List</a></li>
     </ul>
 {% endblock %}
