--- a/static/css/site.css
+++ b/static/css/site.css
@@ -1,7 +1,10 @@
+/* site.css */
+
 body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
+  background-color: #f2f2f2;
 }
 
 .container {
@@ -39,5 +42,12 @@ p {
   font-size: 16px;
   color: #666;
 }
-
-
+.nav-item {
+  transition: all 0.3s;
+}
+.nav-item:hover {
+  transform: scale(1.1);
+}
+.nav-item-index {
+  font-size: 1.2rem;
+}
