--- a/templates/pokemon_list.html
+++ b/templates/pokemon_list.html
@@ -2,12 +2,11 @@
 
 {% block content %}
   <h1>Pokemon List</h1>
-  <ul>
+  <ul class="bg-gray-100">
     {% for pokemon in pokemon_list %}
       <li><a href="{% url 'pokemon_detail' pokemon.pk %}">{{ pokemon.name }}</a></li>
     {% empty %}
       <li>No Pokémon found.</li>
     {% endfor %}
   </ul>
-  <a href="{% url 'pokemon_create' %}">Create Pokemon</a>
 {% endblock %}
