ribenabos/pokepedia#1 [UNSTABLE] Pokédex module functionalities
Must fix the detail view as the relational fields are not being properly displayed.

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,11 @@
     Pokédex - Index
 {% endblock %}
 {% block content %}
-    <h1>Pokédex/h1>
+    <h1>Pokédex</h1>
 
     <h2>Navigation:</h2>
     <ul>
         <li><a href="{% url 'pokedex_index' %}">Pokédex</a></li>
+        <li><a href="{% url 'pokemon_list' %}">Pokémon List</a></li>
     </ul>
 {% endblock %}
