--- a/static/css/site.css
+++ b/static/css/site.css
@@ -1,5 +1,3 @@
-/* site.css */
-
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -42,12 +40,38 @@ p {
   font-size: 16px;
   color: #666;
 }
+
 .nav-item {
   transition: all 0.3s;
 }
+
 .nav-item:hover {
   transform: scale(1.1);
 }
+
 .nav-item-index {
   font-size: 1.2rem;
+}
+
+.card {
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 20px;
+  margin-bottom: 20px;
+  background-color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.card-title {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.card-content {
+  margin-bottom: 10px;
+}
+
+.card-select {
+  margin-bottom: 10px;
 }
