--- a/templates/pokedex_index.html
+++ b/templates/pokedex_index.html
@@ -4,7 +4,7 @@
     Pokédex - Index
 {% endblock %}
 {% block content %}
-    <h1>Pokédex/h1>
+    <h1>Pokédex</h1>
 
     <h2>Navigation:</h2>
     <ul>
