--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
   {% block extra_css %}{% endblock %}
   {% block head_js %}
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@2.8.2/dist/alpine.js" defer></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   {% endblock %}
 
   <link href="{% static 'css/site.css' %}" rel="stylesheet" type="text/css" />
