--- a/templates/pokemon_list.html
+++ b/templates/pokemon_list.html
@@ -1,55 +1,62 @@
 {% extends 'base.html' %}
 {% load static %}
-
 {% block extra_css %}
-  {{ block.super }}
   <style>
-    .modal {
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background: rgba(0, 0, 0, 0.5);
+    .container {
       display: flex;
-      justify-content: center;
-      align-items: center;
     }
 
-    .modal-content {
-      background: #fff;
-      padding: 20px;
-      border-radius: 5px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-      max-width: 500px;
-      width: 100%;
+    #pokemon-list {
+      flex: 1;
+      overflow-y: auto;
     }
 
-    .modal-content img {
-      width: 100%;
+    #pokemon-detail {
+      position: fixed;
+      width: 400px;
+      height: 100%;
+      overflow-y: auto;
+      right: 0;
     }
 
-    .modal-content h1 {
-      font-size: 20px;
-      font-weight: bold;
-      margin-bottom: 10px;
+    .sidebar {
+      flex: 1;
+      margin-right: 25%;
     }
 
-    .modal-content p {
-      margin-bottom: 10px;
+    .pokemon-list {
+      list-style-type: none;
+      padding: 0;
     }
 
-    .modal-content .card-select {
+    .pokemon-list-item {
       margin-bottom: 10px;
     }
   </style>
 {% endblock %}
 
 {% block content %}
-<script>
-    // AJAX function to load Pokemon detail dynamically
+  <h1>Pokémon List</h1>
+
+  <div id="pokemon-list" class="container">
+    <div id="pokemon-detail"></div>
+    <div class="sidebar">
+      <h2>Pokemon List</h2>
+      <ul class="pokemon-list">
+        {% for pokemon in pokemon_list %}
+        <li class="pokemon-list-item">
+          <a href="#" onclick="loadPokemonDetail({{ pokemon.id }}); return false;">
+            <strong>{{ pokemon.id }}</strong> {{ pokemon.name }}<br>
+          </a>
+        </li>
+        {% endfor %}
+      </ul>
+    </div>
+  </div>
+
+  <script>
     function loadPokemonDetail(pk) {
-      const detailUrl = "{% url 'pokemon_detail' pk=0 %}".replace('0', pk); // Replace 0 with the actual Pokemon ID
+      const detailUrl = "{% url 'pokemon_detail' pk=0 %}".replace('0', pk);
 
       $.ajax({
         url: detailUrl,
@@ -64,18 +71,4 @@
       });
     }
   </script>
-  <h1>Pokémon List</h1>
-
-  <div id="pokemon-list">
-    <div id="pokemon-detail"></div>
-    <ul class="pokemon-list bg-gray-100">
-      {% for pokemon in pokemon_list %}
-        <li>
-          <a href="#" onclick="loadPokemonDetail({{ pokemon.id }}); return false;">{{ pokemon.name }}</a>
-        </li>
-      {% empty %}
-        <li>No Pokémon found.</li>
-      {% endfor %}
-    </ul>
-  </div>
 {% endblock %}
