--- a/templates/pokemon_list.html
+++ b/templates/pokemon_list.html
@@ -13,7 +13,7 @@
 
     #pokemon-detail {
       position: fixed;
-      width: 400px;
+      width: 900px;
       height: 100%;
       overflow-y: auto;
       right: 0;
@@ -21,7 +21,7 @@
 
     .sidebar {
       flex: 1;
-      margin-right: 25%;
+      margin-right: 10px;
     }
 
     .pokemon-list {
@@ -46,7 +46,7 @@
         {% for pokemon in pokemon_list %}
         <li class="pokemon-list-item">
           <a href="#" onclick="loadPokemonDetail({{ pokemon.id }}); return false;">
-            <strong>{{ pokemon.id }}</strong> {{ pokemon.name }}<br>
+            <strong>{{ pokemon.id }}</strong> {{ pokemon.name.capitalize }}<br>
           </a>
         </li>
         {% endfor %}
