--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,12 @@
     <div class="container mx-auto flex justify-between">
       <a href="{% url 'index' %}" class="text-white font-bold text-lg nav-item nav-item-index">Poképedia</a>
       <a href="{% url 'pokedex_index' %}" class="text-white font-bold text-lg nav-item">Pokédex</a>
+    {% if user.is_authenticated %}
+      <a href="{% url 'logout' %}" class="text-white font-bold text-lg nav-item">Log Out</a>
+    {% else %}
+      <a href="{% url 'login' %}" class="text-white font-bold text-lg nav-item">Log In</a>
+      <a href="{% url 'signup' %}" class="text-white font-bold text-lg nav-item">Sign Up</a>
+    {% endif %}
     </div>
   </nav>
   <div class="container mx-auto pt-16 bg-gray-100">
